--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div>
+      <div id="page-logo">
         <a href="index.html">Travel Goals</a>
       </div>
       <nav>
