--- a/places.html
+++ b/places.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="shared.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="places.css" />
     <title>Travel Goals</title>
   </head>
   <body>
@@ -23,7 +23,23 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <ul>
+        <li>
+          <img src="images/places/barcelona.jpg" alt="City of Barcelona" />
+          <div class="content">
+            <h2>Barcelona</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam
+              provident aperiam inventore, tempora sit excepturi cum.
+            </p>
+          </div>
+          <div class="actions">
+            <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+          </div>
+        </li>
+      </ul>
+    </main>
     <footer>
       <ul>
         <li>
