--- a/places.html
+++ b/places.html
@@ -36,7 +36,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Barcelona">Explore &#x2192</a>
+              <a href="https://en.wikipedia.org/wiki/Barcelona">Explore ➜</a>
             </div>
           </div>
         </li>
@@ -51,7 +51,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="hhttps://en.wikipedia.org/wiki/Hawaii">Explore &#x2192</a>
+              <a href="hhttps://en.wikipedia.org/wiki/Hawaii">Explore ➜</a>
             </div>
           </div>
         </li>
@@ -70,7 +70,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/London">Explore &#x2192</a>
+              <a href="https://en.wikipedia.org/wiki/London">Explore ➜</a>
             </div>
           </div>
         </li>
@@ -85,7 +85,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Miami">Explore &#x2192</a>
+              <a href="https://en.wikipedia.org/wiki/Miami">Explore ➜</a>
             </div>
           </div>
         </li>
@@ -100,12 +100,15 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Munich">Explore &#x2192</a>
+              <a href="https://en.wikipedia.org/wiki/Munich">Explore ➜</a>
             </div>
           </div>
         </li>
         <li>
-          <img src="images/places/new-york-city.jpg" alt="New York City skyline" />
+          <img
+            src="images/places/new-york-city.jpg"
+            alt="New York City skyline"
+          />
           <div class="item-content">
             <div>
               <h2>New York City</h2>
@@ -116,7 +119,7 @@
             </div>
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/New_York_City"
-                >Explore &#x2192</a
+                >Explore ➜</a
               >
             </div>
           </div>
@@ -132,7 +135,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Paris">Explore &#x2192</a>
+              <a href="https://en.wikipedia.org/wiki/Paris">Explore ➜</a>
             </div>
           </div>
         </li>
@@ -147,7 +150,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Sydney">Explore &#x2192</a>
+              <a href="https://en.wikipedia.org/wiki/Sydney">Explore ➜</a>
             </div>
           </div>
         </li>
@@ -162,7 +165,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Tokyo">Explore &#x2192</a>
+              <a href="https://en.wikipedia.org/wiki/Tokyo">Explore ➜</a>
             </div>
           </div>
         </li>
@@ -177,7 +180,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Bali">Explore &#x2192</a>
+              <a href="https://en.wikipedia.org/wiki/Bali">Explore ➜</a>
             </div>
           </div>
         </li>
